Sun Jul 26 05:14:41 1998  Noel Cragg  <noel@swish.red-bean.com>

	* This set of changes reverts the code to pre-1.9.2 behavior and
 	does not create CVS directories at top-level (except for the
 	obvious "cvs co .").  Added a new configuration option to switch
 	between 1.9 and 1.9.2 behavior.
	
	* recurse.c (do_argument_proc): new function.
	(start_recursion): in the case that we've done a command from
 	top-level but have no CVS directory there, the behavior should be
 	the same as "cvs <cmd> dir1 dir2 dir3...".  Make sure that the
 	appropriate "Argument" commands are sent to the server by calling
 	walklist with do_argument_proc.
 
	* client.c (call_in_directory): only create the top-level CVS
 	directory when we're checking out "." explicitly.  The server will
 	force creation of this directory in all other cases.

	* checkout.c (checkout_proc): only generate the top-level
 	directory when the TopLevelAdmin=yes.  Also send a message to the
 	client to do the same.

	* parseinfo.c (parse_config): handle TopLevelAdmin option.  Set
 	top_level_admin.

	* main.c: add new variable top_level_admin.
	* cvs.h: add extern definition for above.

	* sanity.sh: since we're reverting to pre 1.9.2 behavior for
 	top-level CVS directories, I needed to make changes to a bunch of
 	tests that made assumptions about said directories.
	(preamble): make sure to add read and execute access to everything
 	in TMPDIR before removing, since some tests make things read-only.
	(basicb-1a, basicb-1b, basicb-9a, basicb-9b): use dotest_fail
 	because these tests check for the non-existant top-level CVS
 	directory.
	(basicc-3, emptydir-6, emptydir-7, crerepos-6): use "rm -rf" so it
 	won't complain when trying to remove the non-existant top-level
 	CVS directory.
	(106.5): remove imported-f2-orig.tmp.
	(modules2-10, emptydir-4, abspath-1ba, abspath-1bb): cd into the
 	directory where files exist before using the "add" command so cvs
 	can find CVSROOT in CVS/Root.